# Open3d_detectblocks

./: .gitignore  CMakeLists.txt  README.md
PrimeUtil/: CMakeLists.txt
PrimeUtil/include/: primeutil.h
PrimeUtil/src/: libtest.cpp  primeutil.cpp
plys/: debugdetectblock1.ply
sharedlib/: CMakeLists.txt  Makefile  TestVisualizer
sharedlib/include/: detectblocks.h  detectedblock.h
sharedlib/src/: detectblocks.cpp
usesharedlib/: CMakeLists.txt  HOW TO COMPILE
usesharedlib/src/: demo2.cpp  tests.cpp
